# PhotoProcessor

./: CMakeLists.txt  README.md  image_processor.cpp  image_processor.h  main.cpp
